<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LinearlayoutActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/linearlayout_main_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimens_30dp"
        android:layout_marginTop="@dimen/dimens_60dp"
        android:background="@drawable/box"
        android:text="@string/goToLinearLayout" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/linearlayout_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_30dp"
            android:layout_marginTop="@dimen/dimens_30dp"
            android:layout_weight="1"
            android:background="@drawable/box"
            android:text="@string/button1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/linearlayout_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_10dp"
            android:layout_marginTop="@dimen/dimens_30dp"
            android:layout_marginEnd="@dimen/dimens_10dp"
            android:layout_weight="1"
            android:background="@drawable/box"
            android:text="@string/button2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/linearlayout_btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_30dp"
            android:layout_marginEnd="@dimen/dimens_30dp"
            android:layout_weight="1"
            android:background="@drawable/box"
            android:text="@string/button3" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"

        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/linearlayout_btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_30dp"
            android:layout_marginTop="@dimen/dimens_35dp"
            android:layout_marginEnd="@dimen/dimens_10dp"
            android:layout_weight="1"
            android:background="@drawable/box"
            android:text="@string/button4" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_10dp"
            android:layout_marginTop="@dimen/dimens_35dp"
            android:layout_marginEnd="@dimen/dimens_30dp"
            android:layout_weight="1"
            android:background="@drawable/box"
            android:text="@string/button5" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dimens_30dp"
        android:layout_marginTop="@dimen/dimens_300dp"
        android:layout_marginEnd="@dimen/dimens_30dp"
        android:layout_marginBottom="@dimen/dimens_30dp"
        android:background="@drawable/box"
        android:text="@string/submit" />

</androidx.appcompat.widget.LinearLayoutCompat>
