<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ConstraintActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/begin_guideline_marrgine_Con30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dimens_30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline_margine_Con30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dimens_30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline_margine_Con30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dimens_30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline_margine_Con30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/dimens_30dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ConstraintBt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_30dp"
        android:background="@drawable/box"
        android:text="@string/gotoConstraintLayout"
        app:layout_constraintEnd_toStartOf="@id/end_guideline_margine_Con30dp"
        app:layout_constraintStart_toStartOf="@id/begin_guideline_marrgine_Con30dp"
        app:layout_constraintTop_toTopOf="@id/top_guideline_margine_Con30dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_30dp"
        android:background="@drawable/box"
        android:text="@string/button1"
        app:layout_constraintStart_toEndOf="@id/begin_guideline_marrgine_Con30dp"
        app:layout_constraintTop_toBottomOf="@id/ConstraintBt"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/box"
        android:text="@string/button2"
        app:layout_constraintEnd_toStartOf="@id/buttonThree"
        app:layout_constraintStart_toEndOf="@+id/buttonOne"
        app:layout_constraintTop_toTopOf="@+id/buttonOne"
        tools:ignore="MissingConstraints"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/box"
        android:text="@string/button3"
        app:layout_constraintEnd_toStartOf="@id/end_guideline_margine_Con30dp"
        app:layout_constraintTop_toTopOf="@+id/buttonOne"
        tools:ignore="MissingConstraints" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/constraint_btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_35dp"
        android:background="@drawable/box"
        android:text="@string/button4"
        app:layout_constraintStart_toEndOf="@id/begin_guideline_marrgine_Con30dp"
        app:layout_constraintTop_toBottomOf="@id/buttonOne"
        app:layout_constraintEnd_toStartOf="@id/constraint_btn5"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/constraint_btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/box"
        android:text="@string/button5"
        app:layout_constraintStart_toEndOf="@id/constraint_btn4"
        app:layout_constraintTop_toTopOf="@id/constraint_btn4"
        app:layout_constraintEnd_toStartOf="@id/end_guideline_margine_Con30dp"
        android:layout_marginStart="0dp"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_final"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/box"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline_margine_Con30dp"
        app:layout_constraintEnd_toEndOf="@id/end_guideline_margine_Con30dp"
        app:layout_constraintStart_toStartOf="@id/begin_guideline_marrgine_Con30dp"
        app:layout_constraintTop_toBottomOf="@+id/constraint_btn4"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>