<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view"
        android:fontFamily="@font/font"
        android:textColor="@color/Red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_25dp"
        android:layout_marginEnd="@dimen/dimens_25dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/dimens_25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_25dp"
        android:layout_marginTop="@dimen/dimens_25dp"
        android:layout_marginEnd="@dimen/dimens_25dp"
        android:drawablePadding="@dimen/dimens_10dp"
        android:paddingStart="@dimen/dimens_10dp"
        android:background="@drawable/box"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:hint="@string/enterUserName"
        android:textSize="@dimen/dimens_25dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/Enterpasssowrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_25dp"
        android:layout_marginTop="@dimen/dimens_25dp"
        android:layout_marginEnd="@dimen/dimens_25dp"
        android:background="@drawable/box"
        android:paddingStart="@dimen/dimens_10dp"
        android:drawableStart="@drawable/ic_baseline_password_24"
        android:drawablePadding="@dimen/dimens_10dp"
        android:hint="@string/enterpassword"
        android:textSize="@dimen/dimens_25dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Edittext"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_25dp"
        android:gravity="center"
        android:fontFamily="@font/sfont"
        android:text="@string/submit"
        android:id="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Enterpasssowrd"

        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_25dp"
        android:gravity="center"
        android:id="@+id/btn_blink"
        android:text="blink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hanalei_fill"
        android:gravity="center"
        android:text="@string/feedBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_blink"
        tools:ignore="MissingConstraints"
        />


</androidx.constraintlayout.widget.ConstraintLayout>