<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.HomeActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/begin_guideline_marrgine30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dimens_30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline_margine30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dimens_30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline_margine30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dimens_30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline_margine30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/dimens_30dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/home_name_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_30dp"
        android:background="@drawable/box"
        android:text="@string/home"
        app:layout_constraintEnd_toEndOf="@id/bottom_guideline_margine30dp"
        app:layout_constraintEnd_toStartOf="@id/end_guideline_margine30dp"
        app:layout_constraintStart_toStartOf="@id/begin_guideline_marrgine30dp"
        app:layout_constraintTop_toTopOf="@id/top_guideline_margine30dp"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/gotoframelayout_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/box"
        android:text="@string/goToFrameLayout"
        android:layout_marginTop="@dimen/dimens_20dp"
       app:layout_constraintStart_toStartOf="@id/begin_guideline_marrgine30dp"
        app:layout_constraintEnd_toStartOf="@id/end_guideline_margine30dp"
        app:layout_constraintTop_toBottomOf="@id/home_name_btn"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/gotolinearlayout_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/begin_guideline_marrgine30dp"
        app:layout_constraintEnd_toStartOf="@id/end_guideline_margine30dp"
        android:layout_marginTop="@dimen/dimens_20dp"
        android:background="@drawable/box"
        android:text="@string/goToLinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/gotoframelayout_btn"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Relativelayout_Btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/box"

        android:text="@string/gotoRelativeLayout"
        app:layout_constraintEnd_toEndOf="@id/end_guideline_margine30dp"
        app:layout_constraintStart_toStartOf="@id/begin_guideline_marrgine30dp"
        android:layout_marginTop="@dimen/dimens_20dp"
        app:layout_constraintTop_toBottomOf="@id/gotolinearlayout_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/gotoconstraint_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_20dp"
        android:background="@drawable/box"
        android:text="@string/gotoConstraintLayout"
        app:layout_constraintStart_toStartOf="@id/begin_guideline_marrgine30dp"
        app:layout_constraintEnd_toStartOf="@id/end_guideline_margine30dp"
        app:layout_constraintTop_toBottomOf="@id/Relativelayout_Btn"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>